# mipt-metaprogramming

./: README.md
homework1/: CMakeLists.txt  main.cpp
homework1/lib/: a_user.cpp  a_user.h  b_user.cpp  b_user.h  common.h  generic_helper.cpp  generic_helper.h  mediator.cpp  mediator.h  observer.cpp  observer.h  proxy.cpp  proxy.h  users_classes.cpp  users_classes.h
linear_hierarchy/: CMakeLists.txt  README.md  main.cpp  typelist  ut.cpp  ut.h
linear_hierarchy/lib/: fibonaccy.h  generate_fibonaccy_hierarchy.cpp  generate_fibonaccy_hierarchy.h  generate_linear_hierarchy.cpp  generate_linear_hierarchy.h  generate_scatter_hierarchy.cpp  generate_scatter_hierarchy.h
typelist/: CMakeLists.txt  main.cpp
typelist/lib/: typelist.cpp  typelist.h  typelist_printer.cpp  typelist_printer.h
